# ForFun

./: Todos.txt
constexpr_experiment/: CMakeLists.txt  Readme.md  fibonacci_sequence_array.cpp
timers/: CMakeLists.txt  timers.hpp
timers/exemple/: CMakeLists.txt  showcase_main1.cpp  showcase_main2.cpp  showcase_main3.cpp  showcase_main4.cpp  showcase_main5.cpp  wip.cpp
timers/impl/: GenTimer.hpp  dbgtimer.hpp  dgbtimer.hpp  swtimer.hpp
timers/impl/hw/: mm_timer.hpp
utilities/: PrintNum.hpp  fits_in.hpp
