

add_executable(showcase1 showcase_main1.cpp)
target_compile_features(showcase1 PUBLIC cxx_std_20)

add_executable(showcase2 showcase_main2.cpp)
target_compile_features(showcase2 PUBLIC cxx_std_20)

add_executable(showcase3 showcase_main3.cpp)
target_compile_features(showcase3 PUBLIC cxx_std_20)

add_executable(showcase4 showcase_main4.cpp)
target_compile_features(showcase4 PUBLIC cxx_std_20)

add_executable(showcase5 showcase_main5.cpp)
target_compile_features(showcase5 PUBLIC cxx_std_20)